@@ -22,6 +22,7 @@ Version 1.4.14 - SVN
     list and multiple-select string list option widget types,
     as well as support for the "trailing_text" widget attribute.
   - Boolean option widgets are henceforth presented as checkboxes.
+  - Tidied up fortune plugin to be inline with specifications for plugins.
 
 Version 1.4.13 - 14 December 2007
 ---------------------------------
